Fix CORS - allow all origins and handle preflight